Working on testing with containers